--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </title>
 </head>
 <body>
-
+    
+    <h1>UPDATE BODY</h1>
 <h1>Hello world!</h1>
 <div><img src="img_hello_world.jpg" alt="Hello World from Space"
     style="width:100%;max-width:960px"></div>
